--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               
             </div>
             <div class="header-right">
-                <span class="wind">Wind Speed</span>
-                <span class="rain">Chance of rain</span>
-                <span class="humidity">Humidity</span>
-                <span class="updated">Last updated:</span>
+                <span class="windOut">Wind Speed<br><i class="fa-solid fa-wind"></i><span class="wind"></span></span>
+                <span class="rainOut">Chance of rain<br><i class="fa-solid fa-cloud-rain"></i><span class="rain"></span></span>
+                <span class="humidityOut">Humidity<br><i class="fa-solid fa-droplet"></i><span class="humidity"></span></span>
+                <span class="updatedOut">Last <updated:span class="updated"></updated:span></span>
             </div>
         </div>
         <div class="footer">
