--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span class="windOut">Wind Speed<br><i class="fa-solid fa-wind"></i><span class="wind"></span></span>
                 <span class="rainOut">Chance of rain<br><i class="fa-solid fa-cloud-rain"></i><span class="rain"></span></span>
                 <span class="humidityOut">Humidity<br><i class="fa-solid fa-droplet"></i><span class="humidity"></span></span>
-                <span class="updatedOut">Last <updated:span class="updated"></updated:span></span>
+                <span class="updatedOut">Last updated:<span class="updated"></updated:span></span>
             </div>
         </div>
         <div class="footer">
